modified dark mode to work well on form fields, fixed tasks section bugs, added tasks preview in the home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,3 +277,67 @@ footer .text-reset {
 .seperator {
     border: 1px solid #ababab; /* Change the color to your preferred color */
 }
+
+
+
+
+
+/* Contact Form */
+
+.contact-form label {
+    color: rgb(33, 37, 41)
+}
+
+
+
+
+
+
+.contact-form input,
+.contact-form textarea,
+.contact-form select {
+    background-color: white; /* Adjust background color to light gray */
+    color: rgb(33, 37, 41); /* Change text color to white */
+}
+
+.contact-form select option {
+    color: rgb(33, 37, 41); /* Change the text color of the options inside the dropdown */
+}
+
+
+.contact-form select:focus,
+.contact-form input:focus,
+.contact-form textarea:focus {
+    border-color: #009a3e !important; /* Optional: Adjust focus border color */
+    box-shadow: 0 0 0 0.25rem rgba(0, 127, 78, 0.25) !important; /* Optional focus shadow */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+    .previewtable {
+        border-radius: 1rem; /* Adjust the value as needed */
+        overflow: hidden; /* Ensure the rounded corners work */
+    }
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
